--- a/dev-libs/openssl/ChangeLog
+++ b/dev-libs/openssl/ChangeLog
@@ -1,5 +1,5 @@
 # ChangeLog for dev-libs/openssl
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # (auto-generated from git log)
 
 *openssl-1.0.2d (09 Aug 2015)
@@ -203,4 +203,193 @@
 
   20 Oct 2015; Julian Ospald <hasufell@gentoo.org> metadata.xml:
   add SLOT description to metadata.xml
+
+*openssl-1.0.2e (03 Dec 2015)
+*openssl-0.9.8z_p8 (03 Dec 2015)
+
+  03 Dec 2015; Mike Frysinger <vapier@gentoo.org>
+  +files/openssl-1.0.2e-pod2man.patch, +openssl-0.9.8z_p8.ebuild,
+  +openssl-1.0.2e.ebuild:
+  version bump to 0.9.8zh & 1.0.2e #567476
+
+  03 Dec 2015; Lars Wendler <polynomial-c@gentoo.org>
+  +files/openssl-1.0.2e-parallel-build.patch, openssl-1.0.2e.ebuild:
+  Added new parallel build patch for 1.0.2e version.
+
+  Package-Manager: portage-2.2.26
+  Signed-off-by: Lars Wendler <polynomial-c@gentoo.org>
+
+  03 Dec 2015; Mike Frysinger <vapier@gentoo.org>
+  -files/openssl-1.0.2e-pod2man.patch, openssl-1.0.2e.ebuild:
+  update manifest after upstream rebuilt releases #567476
+
+  05 Dec 2015; Jeroen Roovers <jer@gentoo.org> openssl-1.0.2e.ebuild:
+  Stable for HPPA PPC64 (bug #567476).
+
+  Package-Manager: portage-2.2.26
+  RepoMan-Options: --ignore-arches
+
+  06 Dec 2015; Matt Turner <mattst88@gentoo.org> openssl-1.0.2e.ebuild:
+  alpha stable, bug 567476.
+
+  07 Dec 2015; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p8.ebuild,
+  openssl-1.0.2e.ebuild:
+  amd64 stable wrt bug #567476
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="amd64"
+  Signed-off-by: Agostino Sarubbo <ago@gentoo.org>
+
+  09 Dec 2015; Markus Meier <maekke@gentoo.org> openssl-1.0.2e.ebuild:
+  arm stable, bug #567476
+
+  Package-Manager: portage-2.2.26
+  RepoMan-Options: --include-arches="arm"
+
+  11 Dec 2015; Mikle Kolyada <zlogene@gentoo.org> openssl-1.0.2e.ebuild:
+  ia64 stable wrt bug #567476
+
+  Package-Manager: portage-2.2.20.1
+
+  13 Dec 2015; Mike Frysinger <vapier@gentoo.org> openssl-1.0.2e.ebuild:
+  mark 1.0.2e arm64/m68k/s390/sh/sparc/x86 stable #567476
+
+  26 Dec 2015; Agostino Sarubbo <ago@gentoo.org> openssl-1.0.2e.ebuild:
+  ppc stable wrt bug #567476
+
+  Package-Manager: portage-2.2.24
+  RepoMan-Options: --include-arches="ppc"
+  Signed-off-by: Agostino Sarubbo <ago@gentoo.org>
+
+  26 Dec 2015; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p8.ebuild:
+  x86 stable wrt bug #567476
+
+  Package-Manager: portage-2.2.24
+  RepoMan-Options: --include-arches="x86"
+  Signed-off-by: Agostino Sarubbo <ago@gentoo.org>
+
+  17 Jan 2016; Mike Frysinger <vapier@gentoo.org> files/gentoo.config-1.0.2:
+  fix sparc builds (mostly 64-bit)
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Unify quoting in metadata.xml files for machine processing
+
+  Force unified quoting in all metadata.xml files since lxml does not
+  preserve original use of single and double quotes. Ensuring unified
+  quoting before the process allows distinguishing the GLEP 67-related
+  metadata.xml changes from unrelated quoting changes.
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
+
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
+
+*openssl-1.0.2f (29 Jan 2016)
+*openssl-1.0.1r (29 Jan 2016)
+
+  29 Jan 2016; Lars Wendler <polynomial-c@gentoo.org>
+  +files/openssl-1.0.1r-x32.patch, +openssl-1.0.1r.ebuild,
+  +openssl-1.0.2f.ebuild:
+  Security bump to versions 1.0.1r and 1.0.2f (bug #572854).
+
+  Package-Manager: portage-2.2.27
+  Signed-off-by: Lars Wendler <polynomial-c@gentoo.org>
+
+  29 Jan 2016; Lars Wendler <polynomial-c@gentoo.org>
+  -files/openssl-1.0.2-s_client-verify.patch,
+  -files/openssl-1.0.2a-malloc-typo.patch,
+  -files/openssl-1.0.2a-parallel-build.patch,
+  -files/openssl-1.0.2d-parallel-build.patch, -openssl-1.0.2a.ebuild,
+  -openssl-1.0.2b.ebuild, -openssl-1.0.2c.ebuild, -openssl-1.0.2d.ebuild,
+  -openssl-1.0.2d-r2.ebuild:
+  Removed old.
+
+  Package-Manager: portage-2.2.27
+  Signed-off-by: Lars Wendler <polynomial-c@gentoo.org>
+
+  29 Jan 2016; Agostino Sarubbo <ago@gentoo.org> openssl-1.0.1r.ebuild,
+  openssl-1.0.2f.ebuild:
+  stable for alpha/amd64/arm/ia64/ppc/ppc64/s390/sh/sparc/x86 wrt security bug
+  #572854
+
+  Package-Manager: portage-2.2.26
+  Signed-off-by: Agostino Sarubbo <ago@gentoo.org>
+
+  30 Jan 2016; Jeroen Roovers <jer@gentoo.org> openssl-1.0.2f.ebuild:
+  Stable for HPPA (bug #572854).
+
+  Package-Manager: portage-2.2.27
+  RepoMan-Options: --ignore-arches
+
+  30 Jan 2016; Jeroen Roovers <jer@gentoo.org> openssl-1.0.1r.ebuild:
+  Stable for HPPA (bug #572854).
+
+  Package-Manager: portage-2.2.27
+  RepoMan-Options: --ignore-arches
+
+  02 Feb 2016; Mike Frysinger <vapier@gentoo.org> openssl-1.0.2f.ebuild:
+  mark 1.0.2f arm64/m68k stable
+
+*openssl-1.0.2f-r1 (09 Feb 2016)
+*openssl-1.0.2e-r1 (09 Feb 2016)
+
+  09 Feb 2016; Jason A. Donenfeld <zx2c4@gentoo.org>
+  +files/openssl-1.0.2e-chacha20poly1305.patch, +openssl-1.0.2e-r1.ebuild,
+  +openssl-1.0.2f-r1.ebuild:
+  carry cloudflare's chacha20poly1305 patch
+
+  09 Feb 2016; Robin H. Johnson <robbat2@gentoo.org>
+  -files/openssl-1.0.2e-chacha20poly1305.patch, openssl-1.0.2e-r1.ebuild,
+  openssl-1.0.2f-r1.ebuild:
+  move large patch to mirrors.
+
+  Package-Manager: portage-2.2.27
+
+  09 Feb 2016; Jason A. Donenfeld <zx2c4@gentoo.org>
+  -openssl-1.0.2e-r1.ebuild, -openssl-1.0.2f-r1.ebuild:
+  the team didn't like my chacha patch
+
+  26 Feb 2016; Doug Goldstein <cardoe@gentoo.org>
+  -files/openssl-1.0.0h-pkg-config.patch,
+  -files/openssl-1.0.1f-revert-alpha-perl-generation.patch,
+  -files/openssl-1.0.1m-ipv6.patch, -files/openssl-1.0.1m-x32.patch,
+  -files/openssl-1.0.1p-parallel-build.patch, -files/openssl-1.0.1r-x32.patch,
+  -openssl-1.0.1p.ebuild, -openssl-1.0.1r.ebuild, -openssl-1.0.2e.ebuild:
+  remove vulnerable versions
+
+  Due to multiple vulnerabilities remove outdated versions of OpenSSL.
+
+  Gentoo-Bug: 567476
+
+  Package-Manager: portage-2.2.26
+  Signed-off-by: Doug Goldstein <cardoe@gentoo.org>
+
+  26 Feb 2016; Doug Goldstein <cardoe@gentoo.org> -openssl-0.9.8z_p7.ebuild:
+  remove vulnerable version
+
+  Due to multiple vulnerabilities remove outdated version of OpenSSL.
+
+  Gentoo-Bug: 567476
+
+  Package-Manager: portage-2.2.26
+  Signed-off-by: Doug Goldstein <cardoe@gentoo.org>
+
+  26 Feb 2016; Doug Goldstein <cardoe@gentoo.org> -files/gentoo.config-1.0.1:
+  remove no longer necessary file
+
+  Package-Manager: portage-2.2.26
+  Signed-off-by: Doug Goldstein <cardoe@gentoo.org>
+
+*openssl-1.0.2g (01 Mar 2016)
+
+  01 Mar 2016; Lars Wendler <polynomial-c@gentoo.org>
+  +files/openssl-1.0.2g-parallel-build.patch, +openssl-1.0.2g.ebuild:
+  Security bump to version 1.0.2g (bug #575548).
+
+  Package-Manager: portage-2.2.27
+  Signed-off-by: Lars Wendler <polynomial-c@gentoo.org>
 
