--- a/metadata/md5-cache/app-crypt/tpm-tools-1.3.8
+++ b/metadata/md5-cache/app-crypt/tpm-tools-1.3.8
@@ -4,10 +4,10 @@ DESCRIPTION=TrouSerS' support tools for the Trusted Platform Modules
 EAPI=4
 HOMEPAGE=http://trousers.sourceforge.net
 IUSE=nls pkcs11 debug
-KEYWORDS=amd64 arm x86
+KEYWORDS=amd64 ~arm arm64 ~m68k ~s390 ~sh x86
 LICENSE=CPL-1.0
 RDEPEND=>=app-crypt/trousers-0.3.0 dev-libs/openssl pkcs11? ( dev-libs/opencryptoki ) nls? ( virtual/libintl )
 SLOT=0
-SRC_URI=mirror://sourceforge/trousers/tpm-tools-1.3.5.tar.gz
-_eclasses_=autotools	199350adb9ae3c85e275b1409e43c90d	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=92411526272a3f6a34d979cacbe3c602
+SRC_URI=mirror://sourceforge/trousers/tpm-tools-1.3.8.tar.gz
+_eclasses_=autotools	199350adb9ae3c85e275b1409e43c90d	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
+_md5_=a33c0e10c4c125ef7755e15f5735f1c6
