--- a/app-emulation/xen-pvgrub/ChangeLog
+++ b/app-emulation/xen-pvgrub/ChangeLog
@@ -1,324 +1,139 @@
 # ChangeLog for app-emulation/xen-pvgrub
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-pvgrub/ChangeLog,v 1.60 2014/10/15 01:42:44 dlan Exp $
-
-  15 Oct 2014; Yixun Lan <dlan@gentoo.org> -xen-pvgrub-4.2.4.ebuild,
-  -xen-pvgrub-4.3.2.ebuild:
-  drop old after stable
-
-  14 Oct 2014; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.5.ebuild:
-  Stable for x86, wrt bug #524200
-
-  14 Oct 2014; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.5.ebuild,
-  xen-pvgrub-4.3.3.ebuild:
-  Stable for amd64, wrt bug #524200
-
-  12 Sep 2014; Yixun Lan <dlan@gentoo.org> -xen-pvgrub-4.4.0.ebuild:
-  cleanup due bug 522576
-
-*xen-pvgrub-4.4.1 (11 Sep 2014)
-*xen-pvgrub-4.3.3 (11 Sep 2014)
-*xen-pvgrub-4.2.5 (11 Sep 2014)
-
-  11 Sep 2014; Yixun Lan <dlan@gentoo.org> +xen-pvgrub-4.2.5.ebuild,
-  xen-pvgrub-4.3.2.ebuild, +xen-pvgrub-4.3.3.ebuild, xen-pvgrub-4.4.0.ebuild,
-  +xen-pvgrub-4.4.1.ebuild:
-  version bump, drop x86 keywords for 4.3.x 4.4.x
-
-  09 Jul 2014; Yixun Lan <dlan@gentoo.org> xen-pvgrub-4.2.4.ebuild,
-  xen-pvgrub-4.3.2.ebuild, xen-pvgrub-4.4.0.ebuild:
-  add bin86 as DEPEND, fix bug 514806
-
-  17 May 2014; Yixun Lan <dlan@gentoo.org> -xen-pvgrub-4.2.2-r1.ebuild,
-  -xen-pvgrub-4.2.3.ebuild, -xen-pvgrub-4.3.1.ebuild,
-  -files/xen-4-CVE-2012-6075-XSA-41.patch,
-  -files/xen-4.2-CVE-2013-12to13-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-18to19-XSA-55.patch,
-  -files/xen-4-CVE-2013-1922-XSA-48.patch,
-  -files/xen-4.2-CVE-2013-14-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-2-XSA-55.patch,
-  -files/xen-4-CVE-2013-1952-XSA-49.patch,
-  -files/xen-4.2-CVE-2013-1-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-16-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-17-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-20to23-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-3-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-4-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-5to7-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-9to10-XSA-55.patch:
-  tree clean old ebuilds
-
-  17 May 2014; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.4.ebuild:
-  Stable for x86, wrt bug #509054
-
-  17 May 2014; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.4.ebuild,
-  xen-pvgrub-4.3.2.ebuild:
-  Stable for amd64, wrt bug #509054
-
-*xen-pvgrub-4.4.0 (23 Mar 2014)
-
-  23 Mar 2014; Ian Delaney <idella4@gentoo.org>
-  +files/xen-4.4-fix_dotconfig-gcc.patch, +xen-pvgrub-4.4.0.ebuild:
-  bump
-
-  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.3.ebuild:
-  Stable for x86, wrt bug #500528
-
-  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.3.ebuild:
-  Stable for amd64, wrt bug #500528
-
-*xen-pvgrub-4.3.2 (19 Feb 2014)
-*xen-pvgrub-4.2.4 (19 Feb 2014)
-
-  19 Feb 2014; Yixun Lan <dlan@gentoo.org> +xen-pvgrub-4.2.4.ebuild,
-  +xen-pvgrub-4.3.2.ebuild:
-  revision bump 4.2.4, 4.3.2
-
-*xen-pvgrub-4.2.3 (15 Feb 2014)
-
-  15 Feb 2014; Ian Delaney <idella4@gentoo.org>
-  +files/xen-pvgrub-4.2.3-qa.patch, +xen-pvgrub-4.2.3.ebuild:
-  bump; extra patchsets prepared by dlan, -qa.patch required a re-base
-
-  24 Jan 2014; Yixun Lan <dlan@gentoo.org> -xen-pvgrub-4.3.0.ebuild:
-  ebuild clean, drop 4.3.0
-
-  01 Jan 2014; Tom Wijsman <TomWij@gentoo.org>
-  -files/xen-4-CVE-2013-0215-XSA-38.patch,
-  -files/xen-4-CVE-2013-1919-XSA-46.patch,
-  -files/xen-4-CVE-2013-1952-XSA_49.patch,
-  -files/xen-4.2-CVE-2013-6-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-7-XSA-55.patch, xen-pvgrub-4.2.2-r1.ebuild,
-  xen-pvgrub-4.3.0.ebuild, xen-pvgrub-4.3.1.ebuild:
-  [QA] Remove unused files. Added quotes to unquoted DISTDIR variables.
-
-  10 Dec 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.3.1.ebuild:
-  Stable for x86, wrt bug #486354
-
-  10 Dec 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.3.1.ebuild:
-  Stable for amd64, wrt bug #486354
-
-*xen-pvgrub-4.3.1 (09 Dec 2013)
-
-  09 Dec 2013; Ian Delaney <idella4@gentoo.org>
-  +files/xen-pvgrub-4.3.1-qa.patch, +xen-pvgrub-4.3.1.ebuild:
-  bump, re-base of files/xen-pvgrub-4-qa.patch for new version
-
-  04 Oct 2013; Ian Delaney <idella4@gentoo.org> -xen-pvgrub-4.2.1-r3.ebuild:
-  remove old
-
-  26 Sep 2013; Ian Delaney <idella4@gentoo.org> xen-pvgrub-4.2.2-r1.ebuild:
-  Correct jserver.patch name in xen-pvgrub-4.2.2-r1, fixes Bug #485248
-
-  23 Aug 2013; Ian Delaney <idella4@gentoo.org> xen-pvgrub-4.2.1-r3.ebuild,
-  xen-pvgrub-4.2.2-r1.ebuild, xen-pvgrub-4.3.0.ebuild:
-  substitute wiki page with xen's offical wiki page, fixes Bug #482114 by a3li
-
-  15 Aug 2013; Patrick Lauer <patrick@gentoo.org> xen-pvgrub-4.2.2-r1.ebuild:
-  Whitespace
-
-  31 Jul 2013; Ian Delaney <idella4@gentoo.org> +files/xen-pvgrub-4-qa.patch,
-  +files/xen-pvgrub-4.2-jserver.patch, -files/xen-4.2.0-jserver.patch,
-  xen-pvgrub-4.2.1-r3, xen-pvgrub-4.2.2-r1.ebuild, xen-pvgrub-4.3.0.ebuild:
-  Re-name xen-4.2.0-jserver.patch -> xen-pvgrub-4.2-jserver.patch,
-  added patch from upstream addressing QA issues
-
-*xen-pvgrub-4.3.0 (21 Jul 2013)
-
-  21 Jul 2013; Ian Delaney <idella4@gentoo.org> +files/xen-4.3-externals.patch,
-  +files/xen-4.3-fix_dotconfig-gcc.patch, +xen-pvgrub-4.3.0.ebuild:
-  bump; Remove py2.6 by discretion, cull redundant sec. patches, upgrade 2 
-  patches, add 1 new DEP and and 1 new external package
-
-  16 Jul 2013; Ian Delaney <idella4@gentoo.org> -xen-pvgrub-4.2.1-r2.ebuild,
-  -xen-pvgrub-4.2.2.ebuild:
-  remove old wrt #472214
-
-  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.2-r1.ebuild:
-  Stable for x86, wrt bug #472214
-
-  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.2-r1.ebuild:
-  Stable for amd64, wrt bug #472214
-
-  27 Jun 2013; Ian Delaney <idella4@gentoo.org>
-  -files/xen-4.2-CVE-2013-11-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-15-XSA-55.patch,
-  -files/xen-4.2-CVE-2013-8-XSA-55.patch, xen-pvgrub-4.2.1-r2.ebuild,
-  xen-pvgrub-4.2.1-r3.ebuild, xen-pvgrub-4.2.2-r1.ebuild,
-  xen-pvgrub-4.2.2.ebuild:
-  rm of re-located patches, rm white space
-
-*xen-pvgrub-4.2.1-r3 (26 Jun 2013)
-*xen-pvgrub-4.2.2-r1 (26 Jun 2013)
-
-  26 Jun 2013; Ian Delaney <idella4@gentoo.org>
-  +files/xen-4.2-CVE-2013-1-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-11-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-12to13-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-14-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-15-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-16-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-17-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-18to19-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-2-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-20to23-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-3-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-4-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-5to7-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-6-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-7-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-8-XSA-55.patch,
-  +files/xen-4.2-CVE-2013-9to10-XSA-55.patch, +xen-pvgrub-4.2.1-r3.ebuild,
-  +xen-pvgrub-4.2.2-r1.ebuild, -files/xen-4-CVE-2012-4544-XSA-25.patch,
-  -files/xen-4.2.0-externals.patch, -xen-pvgrub-4.2.0-r1.ebuild,
-  -xen-pvgrub-4.2.1-r1.ebuild, -xen-pvgrub-4.2.1.ebuild,
-  xen-pvgrub-4.2.1-r2.ebuild, xen-pvgrub-4.2.2.ebuild:
-  revbumps; add sec patches XSA-55, remove disused patches
-
-  23 May 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.1-r2.ebuild:
-  Stable for x86, wrt bug #464724
-
-  23 May 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.1-r2.ebuild:
-  Stable for amd64, wrt bug #464724
-
-  23 May 2013; Ian Delaney <idella4@gentoo.org> xen-pvgrub-4.2.0-r1.ebuild,
-  xen-pvgrub-4.2.1-r1.ebuild, xen-pvgrub-4.2.1-r2.ebuild:
-  Add jajl to DEPEND, fixes Bug #471008' by ago
-
-*xen-pvgrub-4.2.1-r2 (20 May 2013)
-*xen-pvgrub-4.2.2 (20 May 2013)
-
-  20 May 2013; Ian Delaney <idella4@gentoo.org>
-  +files/xen-4-CVE-2013-0215-XSA-38.patch,
-  +files/xen-4-CVE-2013-1919-XSA-46.patch,
-  +files/xen-4-CVE-2013-1922-XSA-48.patch,
-  +files/xen-4-CVE-2013-1952-XSA-49.patch,
-  +files/xen-4-CVE-2013-1952-XSA_49.patch, +xen-pvgrub-4.2.1-r2.ebuild,
-  +xen-pvgrub-4.2.2.ebuild, xen-pvgrub-4.2.0-r1.ebuild,
-  xen-pvgrub-4.2.1-r1.ebuild:
-  rebump with sec. pathces, ditto bump
-
-  19 Feb 2013; Ian Delaney <idella4@gentoo.org> -files/xen-4.2.1-CC.patch,
-  files/xen-4.2.1-externals.patch, xen-pvgrub-4.2.1-r1.ebuild:
-  upgrades to 4.2.0-r1 mirrored in 4.2.1-r1
-
-  19 Feb 2013; Ian Delaney <idella4@gentoo.org> files/xen-4.2.0-externals.patch,
-  xen-pvgrub-4.2.0-r1.ebuild, xen-pvgrub-4.2.1-r1.ebuild:
-  4.2.0-externals.patch improved and absorbs -CC.patch, external zlib build
-  improved with contribution by Tomoatsu Shimada wrt Bug #455194, overhaul of
-  transfer of external packages to source, fixes to build in both arches also
-  wrt Bug #455194 after extended testing, -j1 issue remains; all pertain to xen-
-  pvgrub-4.2.0-r1
-
-  10 Feb 2013; Ian Delaney <idella4@gentoo.org> +files/xen-4.2.1-CC.patch,
-  xen-pvgrub-4.2.1-r1.ebuild:
-  Added -CC.patch offered, tested by, and thanks to, Tomoatsu Shimada, Bug
-  #455196
-
-  04 Feb 2013; Ian Delaney <idella4@gentoo.org> files/xen-4.2.0-jserver.patch,
-  xen-pvgrub-4.2.0-r1.ebuild, xen-pvgrub-4.2.1-r1.ebuild:
-  Added -jserver.patch to -4.2.0-r1, fixed build QA issues of Bugs #455194
-  #455196 by Ago, extended -jserver.patch
-
-  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> -xen-pvgrub-4.1.1-r1.ebuild,
-  -xen-pvgrub-4.1.2.ebuild, -xen-pvgrub-4.2.0.ebuild:
-  Remove old
-
-  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.0-r1.ebuild:
-  Stable for x86, wrt bug #454314
-
-  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.2.0-r1.ebuild:
-  Stable for amd64, wrt bug #454314
-
-*xen-pvgrub-4.2.0-r1 (30 Jan 2013)
-*xen-pvgrub-4.2.1-r1 (30 Jan 2013)
-
-  30 Jan 2013; Ian Delaney <idella4@gentoo.org>
-  +files/xen-4-CVE-2012-4544-XSA-25.patch,
-  +files/xen-4-CVE-2012-6075-XSA-41.patch, +files/xen-4.2.0-jserver.patch,
-  +xen-pvgrub-4.2.0-r1.ebuild, +xen-pvgrub-4.2.1-r1.ebuild,
-  files/xen-4-fix_dotconfig-gcc.patch, files/xen-4.2.0-externals.patch,
-  xen-pvgrub-4.2.0.ebuild, xen-pvgrub-4.2.1.ebuild:
-  revbump; -4.2.0-r1, python eclass added to enable & ensure a py2 build wrt Bug
-  53930, xen-4-fix_dotconfig-gcc.patch, xen-4.2.0-externals.patch upgraded 1
-  sec. patch added, -4.2.1-r1 mirrors changes of -4.2.0-r1, -j1 workaround fixed
-  in -jserver.patch also in -4.2.0.
-
-*xen-pvgrub-4.2.1 (28 Jan 2013)
-
-  28 Jan 2013; Ian Delaney <idella4@gentoo.org>
-  +files/xen-4.2.1-externals.patch, +xen-pvgrub-4.2.1.ebuild,
-  -files/xen-4.2.0-newlib.patch, files/xen-4.2.0-externals.patch:
-  rm redundant xen-4.2.0-newlib.patch, rm corrupted & redundant 1st. hunk of
-  xen-4.2.0-externals.patch, add adjusted xen-4.2.1-externals.patch, version
-  bump
-
-  04 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org> xen-pvgrub-4.1.1-r1.ebuild:
-  This is supposed to be stable amd64 and x86. We do not remove stable keywords
-  just for fun.
-
-*xen-pvgrub-4.2.0 (05 Dec 2012)
-
-  05 Dec 2012; Ian Delaney <idella4@gentoo.org> +files/newlib-implicits.patch,
-  +files/xen-4-fix_dotconfig-gcc.patch, +files/xen-4.2.0-externals.patch,
-  +files/xen-4.2.0-newlib.patch, +xen-pvgrub-4.2.0.ebuild,
-  xen-pvgrub-4.1.1-r1.ebuild, xen-pvgrub-4.1.2.ebuild:
-  bump, patches add dealing with building external packages, sed statements
-  replaced with patches, key QA issues from gcc msgs fixed, minor ones remain
-
-  24 Apr 2012; Michał Górny <mgorny@gentoo.org> xen-pvgrub-4.1.1-r1.ebuild,
-  xen-pvgrub-4.1.2.ebuild:
-  Update to use mirror://.
-
-  28 Nov 2011; Alexey Shvetsov <alexxy@gentoo.org> -xen-pvgrub-9999.ebuild:
-  Move xen-pvgrub-9999 to virtualization overlay
-
-  07 Nov 2011; Alexey Shvetsov <alexxy@gentoo.org> xen-pvgrub-4.1.2.ebuild:
-  Minor sytax changes; rm -j1 from install, added die statements, prepared by
-  Ian Delaney aka idella4
-
-  01 Nov 2011; Tony Vroon <chainsaw@gentoo.org> xen-pvgrub-4.1.1-r1.ebuild:
-  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
-  Lazkani & Ian "idella4" Delaney in bug #360621.
-
-*xen-pvgrub-4.1.2 (25 Oct 2011)
-
-  25 Oct 2011; Alexey Shvetsov <alexxy@gentoo.org> +xen-pvgrub-4.1.2.ebuild:
-  [app-emulation/xen-pvgrub] Version bump prepared by Ian Delaney aka idella4
-
-  13 Oct 2011; Alexey Shvetsov <alexxy@gentoo.org> xen-pvgrub-4.1.1-r1.ebuild:
-  Use toolchain function instead of calling LD directly, copy fix from bug
-  #384359, fix to invoke correct compiler, copy from bug #383973, patches by
-  Ian Delaney aka idella4
-
-  25 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
-  xen-pvgrub-4.1.1-r1.ebuild:
-  x86 stable wrt bug #360621
-
-  21 Sep 2011; Michał Górny <mgorny@gentoo.org> xen-pvgrub-9999.ebuild:
-  Migrate to git-2. Localize git variables.
-
-*xen-pvgrub-4.1.1-r1 (17 Sep 2011)
-
-  17 Sep 2011; Alexey Shvetsov <alexxy@gentoo.org> -xen-pvgrub-4.1.0.ebuild,
-  -xen-pvgrub-4.1.1.ebuild, +xen-pvgrub-4.1.1-r1.ebuild:
-  Prevent internal downloading, also fixes bug #366125, Also sets MAKEOPTS=-j1
-  to ensure building. Thanks to Ian Delaney aka idella4
-
-*xen-pvgrub-4.1.1 (09 Aug 2011)
-
-  09 Aug 2011; Alexey Shvetsov <alexxy@gentoo.org> xen-pvgrub-4.1.0.ebuild,
-  +xen-pvgrub-4.1.1.ebuild, xen-pvgrub-9999.ebuild:
-  Version bump and fix bug #362689
-
-  12 May 2011; Jeremy Olexa <darkside@gentoo.org> xen-pvgrub-4.1.0.ebuild,
-  xen-pvgrub-9999.ebuild:
-  QA: fix SRC_URI to allow fetch
-
-*xen-pvgrub-9999 (07 Apr 2011)
-*xen-pvgrub-4.1.0 (07 Apr 2011)
-
-  07 Apr 2011; Alexey Shvetsov <alexxy@gentoo.org> +xen-pvgrub-4.1.0.ebuild,
-  +xen-pvgrub-9999.ebuild:
-  Initial import. Thanks to newtonian.
-  http://forums.gentoo.org/viewtopic-p-6642981.html
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
+
+*xen-pvgrub-4.5.1 (09 Aug 2015)
+*xen-pvgrub-4.2.5 (09 Aug 2015)
+
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +files/newlib-implicits.patch, +files/xen-4-fix_dotconfig-gcc.patch,
+  +files/xen-4.2.1-externals.patch, +files/xen-4.3-externals.patch,
+  +files/xen-4.3-fix_dotconfig-gcc.patch,
+  +files/xen-4.4-fix_dotconfig-gcc.patch, +files/xen-pvgrub-4-qa.patch,
+  +files/xen-pvgrub-4.2-jserver.patch, +files/xen-pvgrub-4.2.3-qa.patch,
+  +files/xen-pvgrub-4.3.1-qa.patch, +metadata.xml, +xen-pvgrub-4.2.5.ebuild,
+  +xen-pvgrub-4.5.1.ebuild:
+  proj/gentoo: Initial commit
+
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
+
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
+
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
+
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
+
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml,
+  xen-pvgrub-4.2.5.ebuild:
+  Use https by default
+
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
+
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
+
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
+
+  Bug: https://bugs.gentoo.org/552720
+
+*xen-pvgrub-4.6.0 (09 Oct 2015)
+
+  09 Oct 2015; Yixun Lan <dlan@gentoo.org> +xen-pvgrub-4.6.0.ebuild:
+  version bump to 4.6.0
+
+  Package-Manager: portage-2.2.22
+
+*xen-pvgrub-4.5.2 (05 Nov 2015)
+
+  05 Nov 2015; Yixun Lan <dlan@gentoo.org> +xen-pvgrub-4.5.2.ebuild:
+  version bump, 4.5.2
+
+  Package-Manager: portage-2.2.23
+
+  10 Nov 2015; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.5.2.ebuild:
+  amd64 stable wrt bug #564472
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="amd64"
+
+  29 Nov 2015; Ian Delaney <idella4@gentoo.org> xen-pvgrub-4.6.0.ebuild:
+  add missed dep 'pixman' to DEPEND
+
+  to vn. 4.6.0. Fixes cited gentoo bug by Sven
+
+  Gentoo bug: #565138
+
+  Package-Manager: portage-2.2.24
+
+  04 Dec 2015; Ian Delaney <idella4@gentoo.org> -xen-pvgrub-4.2.5.ebuild,
+  -xen-pvgrub-4.5.1.ebuild:
+  rm old vn. 4.2.5, 4.5.1
+
+  Package-Manager: portage-2.2.24
+
+  05 Jan 2016; Ian Delaney <idella4@gentoo.org> xen-pvgrub-4.5.2.ebuild,
+  xen-pvgrub-4.6.0.ebuild:
+  re-add keyword x86 to latest of 4.2.5, 4.2.6
+
+  These should never have been set to -x86 in xen-tools because they support
+  xen guests of x86
+
+  Package-Manager: portage-2.2.26
+
+  05 Jan 2016; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.6.0.ebuild:
+  amd64 stable wrt bug #570932
+
+  Package-Manager: portage-2.2.26
+  RepoMan-Options: --include-arches="amd64"
+  Signed-off-by: Agostino Sarubbo <ago@gentoo.org>
+
+  05 Jan 2016; Agostino Sarubbo <ago@gentoo.org> xen-pvgrub-4.5.2.ebuild,
+  xen-pvgrub-4.6.0.ebuild:
+  x86 stable wrt bug #570932
+
+  Package-Manager: portage-2.2.26
+  RepoMan-Options: --include-arches="x86"
+  Signed-off-by: Agostino Sarubbo <ago@gentoo.org>
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
+
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
+
+*xen-pvgrub-4.6.1 (18 Feb 2016)
+
+  18 Feb 2016; Yixun Lan <dlan@gentoo.org> +xen-pvgrub-4.6.1.ebuild:
+  bump 4.6.1
+
+  Package-Manager: portage-2.2.27
+
