--- a/app-eselect/eselect-pinentry/ChangeLog
+++ b/app-eselect/eselect-pinentry/ChangeLog
@@ -1,113 +1,127 @@
 # ChangeLog for app-eselect/eselect-pinentry
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-eselect/eselect-pinentry/ChangeLog,v 1.1 2015/03/31 16:54:08 ulm Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  31 Mar 2015; Ulrich Müller <ulm@gentoo.org> +eselect-pinentry-0.3.ebuild,
-  +eselect-pinentry-0.4.ebuild, +files/eselect-pinentry-0.3,
-  +files/pinentry.eselect-0.4, +metadata.xml:
-  Move package from app-admin to app-eselect category.
+*eselect-pinentry-0.6 (09 Aug 2015)
+*eselect-pinentry-0.5 (09 Aug 2015)
+*eselect-pinentry-0.4 (09 Aug 2015)
 
-  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Add arm64 love.
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +eselect-pinentry-0.4.ebuild, +eselect-pinentry-0.5.ebuild,
+  +eselect-pinentry-0.6.ebuild, +files/pinentry.eselect-0.4,
+  +files/pinentry.eselect-0.5, +files/pinentry.eselect-0.6, +metadata.xml:
+  proj/gentoo: Initial commit
 
-  05 Dec 2013; Michael Haubenwallner <haubi@gentoo.org>
-  eselect-pinentry-0.4.ebuild:
-  add ~ppc-aix keyword
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for x86, wrt bug #470286
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for s390, wrt bug #470286
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for ppc64, wrt bug #470286
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for ppc, wrt bug #470286
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> eselect-pinentry-0.4.ebuild,
+  eselect-pinentry-0.5.ebuild, eselect-pinentry-0.6.ebuild, metadata.xml:
+  Use https by default
 
-  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for sparc, wrt bug #470286
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for ia64, wrt bug #470286
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for alpha, wrt bug #470286
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for sh, wrt bug #470286
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  09 Jun 2013; Markus Meier <maekke@gentoo.org> eselect-pinentry-0.4.ebuild:
-  arm stable, bug #470286
+  Bug: https://bugs.gentoo.org/552720
 
-  04 Jun 2013; Chema Alonso <nimiux@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for amd64 wrt bug #470286
+  05 Sep 2015; Mikle Kolyada <zlogene@gentoo.org> eselect-pinentry-0.6.ebuild:
+  amd64 stable wrt bug #552614
 
-  03 Jun 2013; Jeroen Roovers <jer@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Stable for HPPA (bug #470286).
+  Package-Manager: portage-2.2.20.1
 
-  19 Feb 2013; Zac Medico <zmedico@gentoo.org> eselect-pinentry-0.4.ebuild:
-  Add ~arm-linux keyword.
+  08 Sep 2015; Jeroen Roovers <jer@gentoo.org> eselect-pinentry-0.6.ebuild:
+  Stable for HPPA PPC64 (bug #552614).
 
-*eselect-pinentry-0.4 (14 Jan 2013)
+  Package-Manager: portage-2.2.20.1
 
-  14 Jan 2013; Samuli Suominen <ssuominen@gentoo.org>
-  +files/pinentry.eselect-0.4, +eselect-pinentry-0.4.ebuild:
-  Version bump to use shared code from eselect-lib-bin-symlink by mgorny.
+  12 Sep 2015; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.6.ebuild:
+  x86 stable wrt bug #552614
 
-  28 Nov 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
-  Add to crypto herd.
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
 
-  25 Nov 2012; Sven Wegener <swegener@gentoo.org> metadata.xml:
-  Move to maintainer-needed.
+  16 Sep 2015; Tobias Klausmann <klausman@gentoo.org>
+  eselect-pinentry-0.6.ebuild:
+  add alpha keyword
 
-  14 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
-  Copy metadata.xml from app-crypt/pinentry since you can't maintain one
-  without another.
+  Gentoo-Bug: 552614
 
-  09 Sep 2012; Raúl Porcel <armin76@gentoo.org> eselect-pinentry-0.3.ebuild:
-  alpha/ia64/s390/sh/sparc stable wrt #421593
+  Package-Manager: portage-2.2.20.1
 
-  17 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
-  eselect-pinentry-0.3.ebuild:
-  Stable ppc ppc64, bug #421593
+  27 Sep 2015; Markus Meier <maekke@gentoo.org> eselect-pinentry-0.6.ebuild:
+  arm stable, bug #552614
 
-  03 Jul 2012; Jeroen Roovers <jer@gentoo.org> eselect-pinentry-0.3.ebuild:
-  Stable for HPPA (bug #421593).
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="arm"
 
-  25 Jun 2012; Markus Meier <maekke@gentoo.org> eselect-pinentry-0.3.ebuild:
-  arm stable, bug #421593
+  10 Oct 2015; Mikle Kolyada <zlogene@gentoo.org> eselect-pinentry-0.6.ebuild:
+  sparc stable wrt bug #552614
 
-  19 Jun 2012; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.3.ebuild:
-  Stable for amd64, wrt bug #421593
+  Package-Manager: portage-2.2.20.1
 
-  17 Jun 2012; Jeff Horelick <jdhore@gentoo.org> eselect-pinentry-0.3.ebuild:
-  marked x86 per bug 421593
+  10 Nov 2015; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.6.ebuild:
+  ppc stable wrt bug #552614
 
-  17 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
-  -eselect-pinentry-0.1.ebuild, -eselect-pinentry-0.2.ebuild,
-  -files/eselect-pinentry-0.1, -files/eselect-pinentry-0.2:
-  old
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc"
 
-  09 May 2012; Alexis Ballier <aballier@gentoo.org>
-  eselect-pinentry-0.3.ebuild:
-  keyword ~amd64-fbsd
+  10 Nov 2015; Agostino Sarubbo <ago@gentoo.org> eselect-pinentry-0.6.ebuild:
+  ia64 stable wrt bug #552614
 
-*eselect-pinentry-0.3 (21 Oct 2010)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
 
-  21 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +files/eselect-pinentry-0.3, +eselect-pinentry-0.3.ebuild:
-  Use EROOT instead of ROOT for prefix support.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-*eselect-pinentry-0.2 (30 Sep 2010)
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  30 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +files/eselect-pinentry-0.2, +eselect-pinentry-0.2.ebuild:
-  If no targets are found, remove the symlink and exit.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-*eselect-pinentry-0.1 (30 Sep 2010)
+*eselect-pinentry-0.7 (26 Jan 2016)
 
-  30 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +files/eselect-pinentry-0.1, +eselect-pinentry-0.1.ebuild:
-  Initial commit wrt #338691 by Michał Górny.
+  26 Jan 2016; Kristian Fiskerstrand <k_f@gentoo.org>
+  +eselect-pinentry-0.7.ebuild, +files/pinentry.eselect-0.7:
+  Add pinentry-tty as an option
+
+  Bug: 572750
+
+  Package-Manager: portage-2.2.27
+
