--- a/app-eselect/eselect-pinentry/files/pinentry.eselect-0.6
+++ b/app-eselect/eselect-pinentry/files/pinentry.eselect-0.6
@@ -4,10 +4,10 @@
 
 DESCRIPTION="Manage /usr/bin/pinentry implementation"
 MAINTAINER="ssuominen@gentoo.org"
-VERSION="0.4"
+VERSION="0.5"
 
 SYMLINK_PATH=/usr/bin/pinentry
-SYMLINK_TARGETS=( pinentry-qt pinentry-gtk-2 pinentry-qt4 pinentry-curses )
+SYMLINK_TARGETS=( pinentry-gnome3 pinentry-qt pinentry-gtk-2 pinentry-qt4 pinentry-curses )
 SYMLINK_DESCRIPTION='pinentry binary'
 
 inherit bin-symlink
