--- a/metadata/md5-cache/dev-cpp/glog-0.3.1
+++ b/metadata/md5-cache/dev-cpp/glog-0.3.1
@@ -1,13 +1,13 @@
-DEFINED_PHASES=configure
+DEFINED_PHASES=configure prepare
 DEPEND=gflags? ( dev-cpp/gflags ) test? ( dev-cpp/gmock dev-cpp/gtest )
 DESCRIPTION=Google's C++ logging library
 EAPI=4
-HOMEPAGE=http://code.google.com/p/google-glog/
+HOMEPAGE=https://github.com/google/glog
 IUSE=gflags static-libs test
-KEYWORDS=amd64 arm x86
+KEYWORDS=~amd64 ~arm ~x86
 LICENSE=BSD
 RDEPEND=gflags? ( dev-cpp/gflags )
 SLOT=0
-SRC_URI=http://google-glog.googlecode.com/files/glog-0.3.1-1.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=a41bed8eb176a35f2e8f9d4dfd2e8571
+SRC_URI=https://google-glog.googlecode.com/files/glog-0.3.1-1.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
+_md5_=fd3445214d601c622d641bf798ac63b8
