--- a/metadata/md5-cache/dev-lang/perl-5.22.1
+++ b/metadata/md5-cache/dev-lang/perl-5.22.1
@@ -9,6 +9,6 @@ LICENSE=|| ( Artistic GPL-1+ )
 PDEPEND=>=app-admin/perl-cleaner-2.5 >=virtual/perl-File-Temp-0.230.400-r2 >=virtual/perl-Data-Dumper-2.154.0 virtual/perl-Test-Harness
 RDEPEND=berkdb? ( sys-libs/db:* ) gdbm? ( >=sys-libs/gdbm-1.8.3 ) app-arch/bzip2 sys-libs/zlib
 SLOT=0/5.22
-SRC_URI=mirror://cpan/src/5.0/perl-5.22.0.tar.bz2 mirror://cpan/authors/id/S/SH/SHAY/perl-5.22.0.tar.bz2 mirror://gentoo/perl-5.22.0-patches-1.tar.xz https://dev.gentoo.org/~civil/distfiles/perl-5.22.0-patches-1.tar.xz
+SRC_URI=mirror://cpan/src/5.0/perl-5.22.1.tar.bz2 mirror://cpan/authors/id/S/SH/SHAY/perl-5.22.1.tar.bz2 mirror://gentoo/perl-5.22.1-patches-1.tar.xz https://dev.gentoo.org/~dilfridge/distfiles/perl-5.22.1-patches-1.tar.xz
 _eclasses_=alternatives	b19e1ec28e600fa497461bddfb9c1f16	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	multilib	62927b3db3a589b0806255f3a002d5d3	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
-_md5_=96cd0e04a6de4336bc1ee125f1908b59
+_md5_=a6759820115b27c4ad77e97e4f613d2a
