--- a/metadata/md5-cache/dev-libs/engine_pkcs11-0.1.8
+++ b/metadata/md5-cache/dev-libs/engine_pkcs11-0.1.8
@@ -1,12 +1,11 @@
 DEFINED_PHASES=configure install
-DEPEND=>=dev-libs/libp11-0.2.5 dev-libs/openssl
+DEPEND=>=dev-libs/libp11-0.2.5 >=dev-libs/openssl-0.9.7d:0 virtual/pkgconfig
 DESCRIPTION=engine_pkcs11 is an implementation of an engine for OpenSSL
 EAPI=2
 HOMEPAGE=http://www.opensc-project.org/engine_pkcs11
-IUSE=doc
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ppc ppc64 ~sparc ~x86
+KEYWORDS=~alpha amd64 hppa ia64 ppc ppc64 sparc x86
 LICENSE=LGPL-2.1
-RDEPEND=>=dev-libs/libp11-0.2.5 dev-libs/openssl
+RDEPEND=>=dev-libs/libp11-0.2.5 >=dev-libs/openssl-0.9.7d:0
 SLOT=0
 SRC_URI=http://www.opensc-project.org/files/engine_pkcs11/engine_pkcs11-0.1.8.tar.gz
-_md5_=336814f10764235385605e309cd71d73
+_md5_=8f26680c88d6767947b2f3063400c414
