--- a/sys-fs/aufs-headers/ChangeLog
+++ b/sys-fs/aufs-headers/ChangeLog
@@ -1,83 +1,92 @@
 # ChangeLog for sys-fs/aufs-headers
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs-headers/ChangeLog,v 1.12 2013/09/20 17:48:56 jlec Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  20 Sep 2013; Justin Lecher <jlec@gentoo.org>
-  aufs-headers-3.2_p20130821.ebuild, aufs-headers-3.2_p20130826.ebuild,
-  aufs-headers-3.2_p20130915.ebuild, aufs-headers-3.10_p20130807.ebuild,
-  aufs-headers-3.10_p20130821.ebuild, aufs-headers-3.10_p20130826.ebuild,
-  aufs-headers-3.11_p20130915.ebuild:
-  Convert to doheader
+*aufs-headers-4.0_p20150420 (09 Aug 2015)
+*aufs-headers-3.19_p20150420 (09 Aug 2015)
+*aufs-headers-3.19_p20150323 (09 Aug 2015)
 
-*aufs-headers-3.11_p20130915 (17 Sep 2013)
-*aufs-headers-3.2_p20130915 (17 Sep 2013)
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +aufs-headers-3.19_p20150323.ebuild, +aufs-headers-3.19_p20150420.ebuild,
+  +aufs-headers-4.0_p20150420.ebuild, +metadata.xml:
+  proj/gentoo: Initial commit
 
-  17 Sep 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.2_p20130915.ebuild, +aufs-headers-3.11_p20130915.ebuild:
-  Bump to latest aufs3 release
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-*aufs-headers-3.10_p20130826 (26 Aug 2013)
-*aufs-headers-3.2_p20130826 (26 Aug 2013)
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  26 Aug 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.2_p20130826.ebuild, +aufs-headers-3.10_p20130826.ebuild:
-  Version Bump
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-*aufs-headers-3.10_p20130821 (21 Aug 2013)
-*aufs-headers-3.2_p20130821 (21 Aug 2013)
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  21 Aug 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.2_p20130821.ebuild, -aufs-headers-3.8_p20130318.ebuild,
-  -aufs-headers-3.8_p20130325.ebuild, -aufs-headers-3.8_p20130401.ebuild,
-  -aufs-headers-3.8_p20130422-r1.ebuild, -aufs-headers-3.10_p20130722.ebuild,
-  +aufs-headers-3.10_p20130821.ebuild:
-  Add latest version drop old
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org>
+  aufs-headers-3.19_p20150323.ebuild, aufs-headers-3.19_p20150420.ebuild,
+  aufs-headers-4.0_p20150420.ebuild, metadata.xml:
+  Use https by default
 
-*aufs-headers-3.10_p20130807 (07 Aug 2013)
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  07 Aug 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.10_p20130807.ebuild:
-  Latest release
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*aufs-headers-3.10_p20130722 (22 Jul 2013)
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  22 Jul 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.10_p20130722.ebuild:
-  Version BUmp
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-*aufs-headers-3.8_p20130422-r1 (27 Apr 2013)
+  Bug: https://bugs.gentoo.org/552720
 
-  27 Apr 2013; Justin Lecher <jlec@gentoo.org>
-  -aufs-headers-3.8_p20130422.ebuild, +aufs-headers-3.8_p20130422-r1.ebuild:
-  Fix version replacement
+  19 Sep 2015; Agostino Sarubbo <ago@gentoo.org>
+  aufs-headers-4.0_p20150420.ebuild:
+  amd64 stable wrt bug #556646
 
-*aufs-headers-3.8_p20130422 (27 Apr 2013)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="amd64"
 
-  27 Apr 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.8_p20130422.ebuild:
-  Bump to latest aufs3 release
+  19 Sep 2015; Agostino Sarubbo <ago@gentoo.org>
+  aufs-headers-4.0_p20150420.ebuild:
+  x86 stable wrt bug #556646
 
-*aufs-headers-3.8_p20130401 (02 Apr 2013)
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
 
-  02 Apr 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.8_p20130401.ebuild:
-  Version Bump
+  01 Oct 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add missing remote-id type=sourceforge
 
-*aufs-headers-3.8_p20130325 (30 Mar 2013)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  30 Mar 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.8_p20130325.ebuild:
-  Version BUmp
+*aufs-headers-4.0_p20151116 (16 Nov 2015)
 
-*aufs-headers-3.8_p20130318 (15 Mar 2013)
+  16 Nov 2015; Justin Lecher <jlec@gentoo.org>
+  +aufs-headers-4.0_p20151116.ebuild, metadata.xml:
+  Bump to latest aufs release
 
-  15 Mar 2013; Justin Lecher <jlec@gentoo.org>
-  +aufs-headers-3.8_p20130318.ebuild, -aufs-headers-3.8.0.ebuild:
-  Version Bump
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*aufs-headers-3.8.0 (10 Mar 2013)
-
-  10 Mar 2013; Justin Lecher <jlec@gentoo.org> +aufs-headers-3.8.0.ebuild,
-  +metadata.xml:
-  Added new package
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
